# nova-f

./: .gitattributes  .gitignore  EXPERIMENT.md  FINAL_TECHNICAL_REPORT.md  OPTIMIZATION_REPORT_BY_CLAUDE.md  OPTIMIZATION_WORKFLOW_PLAN.md  PROGRESS_REPORT.md  README.md  TECHNICAL_OPTIMIZATION_REPORT.md  main.py  pyproject.toml  run.sh  setup_install.sh
ans/: test_label.csv  test_label_faiss.csv  test_label_pipeline.csv
src/: build_faiss.py  preprocess.py  search_faiss.py  structured_features.py
utils/: analyze_errors.py  apply_mined_path_rules.py  apply_rule_config.py  apply_signature_rescue.py  cache_search_results.py  conditional_filter_predictions.py  convert_datacon_jsonl.py  diagnose_long_tail.py  evaluate_per_label.py  evaluate_predictions.py  experiment_labelset_completion.py  experiment_multilabel_strategy.py  export_data_gap_report.py  export_rule_config.py  filter_predictions.py  learn_blocklist_from_folds.py  load_full_dataset.py  merge_training_csv.py  mine_path_signature_rules.py  preprocess.py  structured_rerank_experiment.py  structured_signature_rules.py  tune_retrieval_params.py  validate_mined_path_rules_oof.py  validate_signature_rules.py
