[project]
name = "datacon2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "tqdm==4.66.5",
    "chromadb==0.5.5",

    # ✅ use compatible versions
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "faiss-cpu==1.8.0",
    "sentence-transformers==5.1.2",
]
