[project]
name = "nova-f"
version = "0.1.0"
description = "Offline HTTP CVE traffic identification pipeline for DataCon 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "tqdm>=4.66,<5.0",
    "faiss-cpu>=1.8",
    "sentence-transformers>=5.1,<6.0",
]
